--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,8 @@ spring:
   batch:
     jdbc:
       initialize-schema: always
+    job:
+      enabled: false # ???? ???? ?? ???? ??? ??.
 logging:
   level:
     com.ll.sbb20240111: DEBUG
