11강, 테스트 환경에서 배치 실행하는 방법, 각 Job 마다 JobLauncherTestUtils 빈이 필요

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,8 +23,8 @@ spring:
     jdbc:
       initialize-schema: always
     job:
-      name: hello2Job # Job 2??? spring.batch.job.enable=true ?? ? spring.batch.job.name ? ??
-#      enabled: false # ???? ???? ?? ???? ??? ??.
+#      name: hello2Job # ?? ?? ? ???. Job 2??? spring.batch.job.enable=true ?? ? spring.batch.job.name ? ??
+      enabled: false # ???? ???? ?? ???? ??? ??.
 logging:
   level:
     com.ll.sbb20240111: DEBUG
