30강, 해당 배치잡이 운영환경에서만 매일 새벽 1시에 실행되도록

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8090
 spring:
+  profiles:
+    active: dev # 스프링 애플리케이션의 활성 프로파일을 'dev'로 설정
   threads:
     virtual:
       enabled: true
